2019-09-17 David Anderson
   * DWARFTEST.sh: Now uses testendian.c
     to determine test host endianness.
   * test_dwarfnames.c,test_harmless.c: Indentation
     fixed and trailing whitespace removed.
   * testendian.c: New test for test host endianess
     as at least one test (dwarfextract) was not
     written to allow anything but little-endian testing.
   * debuglink/crc32.c,debuglink/runtest.sh: These
     now adjust so that, for test purposes, the hex output
     is identical for little vs big endian test hosts.
2019-04-25 David Anderson
   * PICKUPBIN: Now builds a dwarfdump with --disable-libelf
     and copies it to the top level for testing as dwarfdumpnl.
   * nolibelf: Added directory for testing a nolibelf dwarfdump
     which is named dwarfdumpnl here.
   * CLEANUP: rm dwarfdumpnl.
   * DWARFTEST.sh: run nolibelf/runtest.sh
   * nolibelf:  A directory with the test script and test files.
   * encisoa: A directory with new test object relating to
     DW_AT_containing_type use in gcc.
2019-01-14 David Anderson
   * DWARFTEST.sh: Added comments so it will be easier
     to understand where certain tests are really
     done.
   * dwarfdump-i386-freebsd.O,dwarfdump-i386-ubuntu.O,
     dwarfdump-x86_64-freebsd.O,dwarfdump-x86_64-ubuntu.O:
     New baseline executables.
   * dwgena/test7.base.gz: We now continue from some line table
     errors so that changes the baseline a little.
   * offsetfromlowpc/baseadvlocf,offsetfromlowpc/baseadvlocvf,
     offsetfromlowpc/runtest.sh: New test case for 
     DW_CFA_advance_loc* operations.
2019-01-10 David Anderson
   * DWARFTEST.sh,CLEANUP,PICKUPBIN: In preparation
     for moving to pre-build dwarf_names.c we
     do not explicitly test gennames here.
