@@ -2,24 +2,27 @@
 .debug_frame
 
 fde:
-<    0><0x00000000:0x00b71b00><suppress_check_dwarf><cie offset 0x00000000::cie index     0><fde offset 0x00000010 length: 0x00000020><eh offset none>
+<    0><0x00000000:0x444343434><print_dwarf_check_error><cie offset 0x00000000::cie index     0><fde offset 0x00000014 length: 0x00000038><eh offset none>
         0x00000000: 
-        0x00000030: 
-        0x00000070: 
-        0x000043b3: 
-        0x004386f6: 
+        0x00000030: <off r3=s > 
+        0x00000070: <off r3=s > <off r4=s > 
+        0x000043b3: <off r3=s > <off r4=s > <off r5=s > 
+        0x004386f6: <off r3=s > <off r4=s > <off r5=s > <off r6=s > 
+        0x44386ca39: <off r3=s > <off r4=s > <off r5=s > <off r6=s > <off r7=s > 
 
 cie:
-<    0>	version				1
+<    0>	version				4
 	cie section offset		0 0x00000000
 	augmentation			
 	code_alignment_factor		1
 	data_alignment_factor		1
 	return_address_register		2
-	bytes of initial instructions	3
-	cie length			12
+	bytes of initial instructions	5
+	cie length			16
 	initial instructions
 	 0 DW_CFA_nop
 	 1 DW_CFA_nop
 	 2 DW_CFA_nop
+	 3 DW_CFA_nop
+	 4 DW_CFA_nop
 
